<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LaunchScreen">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Sudoku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sudoku"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/the_classic_puzzle"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sudoku" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/launch_screen_buttons"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/about"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solver" />

    <Button
        android:id="@+id/solver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/launch_screen_buttons"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/solve_sudoku"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_15sdp"

        app:layout_constraintBottom_toTopOf="@id/about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play" />


    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:background="@drawable/launch_screen_buttons"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/play"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@id/solver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>