<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".DifficultyFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/select_difficulty"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/easybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white_buttons"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/easy"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/mediumbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/mediumbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_white_buttons"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/medium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/hardbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easybutton" />

    <Button
        android:id="@+id/hardbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_white_buttons"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/hard"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>